# agentic-ai

./: .gitignore
backend/: README.md  db.py  debug_db_connection.py  index.py  pyproject.toml  requirements.txt  verify_refactor.py
backend/agents/: competitor_scout.py  tech_paper_miner.py  trend_scraper.py  trend_scraper0.py
backend/api/: schemas.py
backend/app/: config.py  main.py
backend/app/routes/: chat.py  pipeline.py
backend/core/: chat_bot.py  dynamic_task_planner.py  index_strategic_knowledge.py  intent_parser.py  llm.py  orchestrator.py  pipeline.py  rag_manager.py  report_builder.py  reranker.py  retreiver_selector.py  retriever_selector.py  strategy_engine.py  summarizer.py  types.py  utils.py
backend/core/tools/: competitor_tool.py  paper_miner_tool.py  trend_scraper_tool.py
backend/data/memory_store/: agent_summaries.json  final_report.json  final_report.md  strategy_report.json
backend/data/raw_docs/: raw_docs.json
backend/frontend/: app_frontend.py
backend/graph/: graph_builder.py  state.py
backend/graph/nodes/: agent_node.py  intent_node.py  planner_node.py  rag_node.py  report_node.py
backend/infra/: db.py  genai_client.py  key_manager.py  memory_store.py
frontend/: package-lock.json  package.json
frontend/app/api/agents/: route.ts
frontend/app/apiTest/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: user-profile.tsx
frontend/db/: schema.ts
frontend/lib/: llm.ts  memory.ts
frontend/lib/agents/: competitor-scout.ts  orchestrator.ts  summarizer.ts  techMiner.ts  trend-scraper.ts
(+17 files in other folders)
